content changes done in blog page

--- a/assets/pug/data/list-type.pug
+++ b/assets/pug/data/list-type.pug
@@ -52,35 +52,35 @@
             title:"Google project apply reviwe",
             subTitle:"Today’s news headlines..",
             badge:"2hr ago",
-            url:"blog.html", 
+            url:"blog-grid.html", 
         },
         {
             image:"news/2.jpg",
             title:"Business logo create", 
             subTitle:"check out the latest...",
             badge:"4hr ago",
-            url:"blog.html",  
+            url:"blog-grid.html",  
         },
         {
             image:"news/3.jpg",
             title:"Business project research",
             subTitle:"News in english: get...",  
             badge:"10 Jun",
-            url:"blog.html",  
+            url:"blog-grid.html",  
         },
         {
             image:"news/4.jpg", 
             title:"Recruitment in it Department", 
             subTitle:"Technology and...",
             badge:"22 Jun",
-            url:"blog.html",  
+            url:"blog-grid.html",  
         },
         {
             image:"news/5.jpg",
             title:"Business project research",
             subTitle:"Contributions private...",
             badge:"10 July",
-            url:"blog.html",  
+            url:"blog-grid.html",  
         }, 
 
     ];
@@ -92,28 +92,28 @@
             title:"Indonesian Navy Lauds Mental Perseverance of Teenager stranded at sea...",
             subTitle:"Today’s News Headlines, Breaking...",
             badge:"10 Min ago",
-            url:"blog.html", 
+            url:"blog-grid.html", 
         },
         {
             image:"news/7.jpg",
             title:"Why now may be the ‘golden age’ for Southeast asia start-ups...",
             subTitle:"Check out the latest news from...",
             badge:"8 Min ago",
-            url:"blog.html", 
+            url:"blog-grid.html", 
         }, 
         {
             image:"news/8.jpg",
             title:"China’s renewed crypto crackdown wipes nearly $400...",
             subTitle:"Technology and indian business news...",
             badge:"12 Min ago",
-            url:"blog.html", 
+            url:"blog-grid.html", 
         },
         {
             image:"news/8.jpg",
             title:"China’s renewed crypto crackdown wipes nearly $400...",
             subTitle:"Technology and indian business news...",
             badge:"12 Min ago",
-            url:"blog.html", 
+            url:"blog-grid.html", 
         },
 
 
