--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -107,7 +107,7 @@ html(lang='en')
 
                   div(class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5")
                     h4(class="mb-4 font-bold dark:text-white") Latest Blogs
-                    ul.flex.flex-col.gap-1 
+                    ul.flex.flex-col.gap-1
                       li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                         a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                           div.avatar  
@@ -344,9 +344,9 @@ html(lang='en')
                                 span.text-content Dec 27, 2022 
                             i(data-feather="more-vertical" class="h-5 stroke-content")
                           div 
-                            h5(class="mb-2 font-bold dark:text-white") Take The Stress Out Of Code 
-                            p(class="text-content")  Complexity can often come through making the quick fix, taking the shortcut and creating technical debt. 
-                              | Technical debt is another name for complexity because technical debt makes code  and more difficult to work with.  
+                            h5(class="mb-2 font-bold dark:text-white") Content Management System 
+                            p(class="text-content")  Your ecommerce website comes with a content management 
+                              | system (CMS) used to create web pages and blog posts.  
                               a(href="blog-detail.html" class="text-secondary hover:underline").decoration-1 Read more...
                           div
                             div.divider.w-full 
