--- a/assets/pug/pages/template/user-profile.pug
+++ b/assets/pug/pages/template/user-profile.pug
@@ -133,14 +133,14 @@ html(lang='en')
                         div.flex.items-center.gap-4(class="2md:flex-col 2md:items-start") 
                           div.flex.user-detail.items-center.gap-4
                             div.bg-gray-light(class="grid w-8 h-8 rounded-full place-content-center ")
-                              i.fa-solid.fa-user-tie
+                              i(class="dark:stroke-title").fa-solid.fa-user-tie
                             div.text-start
                               p.text-title(class="text-xs font-semibold dark:text-white") Designation
                               span.text-content3(class="font-semibold text-2xs") Fullstack Developer        
                           div.flex.user-detail.items-center.gap-4
                             div.bg-gray-light(class="grid w-8 h-8 rounded-full place-content-center")
-                              i.fa-solid.fa-globe
-                            div.text-start
+                              i(class="dark:stroke-title").fa-solid.fa-globe
+                            div.text-start 
                               p.text-title(class="text-xs font-semibold dark:text-white") Website
                               span.text-content3(class="font-semibold text-2xs") www.govo.com                                                         
                         div.flex.flex-col.gap-2
