--- a/html/template/blog-detail.html
+++ b/html/template/blog-detail.html
@@ -1119,7 +1119,7 @@
                       <h4 class="mb-2 font-bold dark:text-white">Subscriber</h4>
                       <p class="text-xs text-content">" To get more detail for new types of blogs "</p>
                     </div>
-                    <form class="m-0 theme-form">
+                    <form class="m-0 theme-form"> 
                       <input class="dark:bg-sidebar-dark2 dark:text-white" type="email" id="Email" placeholder="Enter your email" Name="Email" required>
                       <button class="w-full lg:!w-auto p-2 !mb-0 text-white rounded bg-primary hover:drop-shadow-lg">Get Started</button>
                     </form>
@@ -1130,10 +1130,11 @@
             <div class="col-span-9 4xl:col-span-8 lg:col-span-12">
               <div class="grid grid-cols-12 gap-card-gap">
                 <div class="col-span-12 lg:col-span-12">
-                  <div class="card p-6 sm:p-4">
+                  <div class="card p-6 sm:p-4"> 
                     <div class="card-body"> 
                       <div class="bg-white rounded-lg"><img class="rounded-t-lg" src="../../assets/images/blog/blog-details.svg" alt="blog-details.svg"></div>
-                      <h4 class="font-bold mb-3">Floyd L. Mitchell</h4>
+                      <h4 class="font-bold mb-3">
+                         Floyd L. Mitchell</h4>
                       <p class="text-content md:line-clamp-2 mb-3">Machines to craft the Geminis DK. Not only his overall appearance was inspired, but his behavior and even the way he shrugs were also fed to the robot, and Scharfe also donated the strands of his own hair to be used in the Geminoid wig. This bot is very realistic as people tend to be mistaken for the person designed to look alike. The main purpose of this creation is to make the humanoid look completely like a human.</p>
                       <p class="text-content md:line-clamp-2 mb-3">Leather detail shoulder contrasting color contour stunning silhouette working peplum. Structured chic panels power party flattering ultimate trim back pencil silhouette perfect look. Wardrobe stylish fitted long sleeves pleats texture fabric mini neckline cobalt blue. Monochrome textures casual daily polo neck knitted floral effortless short sleeve.</p>
                       <p class="text-content md:line-clamp-2 mb-3">Functionality has limited the market for industrial and service robots (built to work in office and home environments). Toy robots, on the other hand, can entertain without performing tasks very reliably, and mechanical varieties have existed for thousands of years. (See automaton.) In the 1980s microprocessor-controlled toys appeared that could speak or move in response to sounds or light. More advanced ones in the 1990s recognized voices and words. In 1999 the Sony Corporation introduced a doglike robot</p>
