--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -1083,7 +1083,7 @@
                   </div>
                   <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
                     <h4 class="mb-4 font-bold dark:text-white">Latest Blogs</h4>
-                    <ul class="flex flex-col gap-1"> 
+                    <ul class="flex flex-col gap-1">
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar"> 
                             <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
@@ -1320,9 +1320,9 @@
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold dark:text-white">Take The Stress Out Of Code </h5>
+                            <h5 class="mb-2 font-bold dark:text-white">Content Management System </h5>
                             <p class="text-content">
-                               Complexity can often come through making the quick fix, taking the shortcut and creating technical debt. Technical debt is another name for complexity because technical debt makes code  and more difficult to work with.  <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
+                               Your ecommerce website comes with a content management system (CMS) used to create web pages and blog posts.  <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
                           <div>
                             <div class="divider w-full"> </div>
