--- a/html/template/index.html
+++ b/html/template/index.html
@@ -1072,11 +1072,8 @@
                       <tbody>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Samsung TV</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Samsung TV</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
@@ -1100,11 +1097,8 @@
                         </tr>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Spring Bed</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Spring Bed</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
@@ -1128,11 +1122,8 @@
                         </tr>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Long Dress</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Long Dress</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
@@ -1156,11 +1147,8 @@
                         </tr>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Phillip Lightbulb</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Phillip Lightbulb</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
@@ -1308,7 +1296,7 @@
                           <td class="min-w-[75px]"> 
                             <h4 class="text-xs font-semibold text-success">Invited</h4>
                           </td>
-                          <td class="min-w-[140px]">
+                          <td class="min-w-[140px]"> 
                             <h4 class="text-xs font-semibold text-title">Interface Designer</h4>
                           </td>
                           <td class="min-w-[50px] text-right"> 
@@ -1350,7 +1338,7 @@
                           <td class="min-w-[75px]"> 
                             <h4 class="text-xs font-semibold text-danger">Active</h4>
                           </td>
-                          <td class="min-w-[140px]">
+                          <td class="min-w-[140px]"> 
                             <h4 class="text-xs font-semibold text-title">Interface Designer</h4>
                           </td>
                           <td class="min-w-[50px] text-right"> 
@@ -1392,7 +1380,7 @@
                           <td class="min-w-[75px]"> 
                             <h4 class="text-xs font-semibold text-success">Invited</h4>
                           </td>
-                          <td class="min-w-[140px]">
+                          <td class="min-w-[140px]"> 
                             <h4 class="text-xs font-semibold text-title">Project Manager</h4>
                           </td>
                           <td class="min-w-[50px] text-right"> 
@@ -1434,7 +1422,7 @@
                           <td class="min-w-[75px]"> 
                             <h4 class="text-xs font-semibold text-danger">Active</h4>
                           </td>
-                          <td class="min-w-[140px]">
+                          <td class="min-w-[140px]"> 
                             <h4 class="text-xs font-semibold text-title">Backend Engineer</h4>
                           </td>
                           <td class="min-w-[50px] text-right"> 
@@ -1635,7 +1623,7 @@
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light dark:border-border-dark dark:border-t"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/1.jpg" alt="event"/></div>
-                        <div class="flex-1"> <a href="blog.html">
+                        <div class="flex-1"> <a href="blog-grid.html">
                             <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Google project apply reviwe</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Today’s news headlines..</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px] dark:bg-sidebar-dark2">2hr ago</span>
@@ -1643,7 +1631,7 @@
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light dark:border-border-dark dark:border-t"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/2.jpg" alt="event"/></div>
-                        <div class="flex-1"> <a href="blog.html">
+                        <div class="flex-1"> <a href="blog-grid.html">
                             <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Business logo create</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">check out the latest...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px] dark:bg-sidebar-dark2">4hr ago</span>
@@ -1651,7 +1639,7 @@
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light dark:border-border-dark dark:border-t"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/3.jpg" alt="event"/></div>
-                        <div class="flex-1"> <a href="blog.html">
+                        <div class="flex-1"> <a href="blog-grid.html">
                             <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Business project research</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">News in english: get...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px] dark:bg-sidebar-dark2">10 Jun</span>
@@ -1659,7 +1647,7 @@
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light dark:border-border-dark dark:border-t"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/4.jpg" alt="event"/></div>
-                        <div class="flex-1"> <a href="blog.html">
+                        <div class="flex-1"> <a href="blog-grid.html">
                             <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Recruitment in it Department</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Technology and...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px] dark:bg-sidebar-dark2">22 Jun</span>
@@ -1667,7 +1655,7 @@
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light dark:border-border-dark dark:border-t"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/5.jpg" alt="event"/></div>
-                        <div class="flex-1"> <a href="blog.html">
+                        <div class="flex-1"> <a href="blog-grid.html">
                             <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Business project research</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Contributions private...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px] dark:bg-sidebar-dark2">10 July</span>
