--- a/html/template/user-profile.html
+++ b/html/template/user-profile.html
@@ -1218,14 +1218,14 @@
                       <div class="flex flex-col gap-4">
                         <div class="flex items-center gap-4 2md:flex-col 2md:items-start"> 
                           <div class="flex user-detail items-center gap-4">
-                            <div class="bg-gray-light grid w-8 h-8 rounded-full place-content-center "><i class="fa-solid fa-user-tie"></i></div>
+                            <div class="bg-gray-light grid w-8 h-8 rounded-full place-content-center "><i class="dark:stroke-title fa-solid fa-user-tie"></i></div>
                             <div class="text-start">
                               <p class="text-title text-xs font-semibold dark:text-white">Designation</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer        </span>
                             </div>
                           </div>
                           <div class="flex user-detail items-center gap-4">
-                            <div class="bg-gray-light grid w-8 h-8 rounded-full place-content-center"><i class="fa-solid fa-globe"></i></div>
-                            <div class="text-start">
+                            <div class="bg-gray-light grid w-8 h-8 rounded-full place-content-center"><i class="dark:stroke-title fa-solid fa-globe"></i></div>
+                            <div class="text-start"> 
                               <p class="text-title text-xs font-semibold dark:text-white">Website</p><span class="text-content3 font-semibold text-2xs">www.govo.com                                                         </span>
                             </div>
                           </div>
