--- a/assets/pug/components/table/transaction-history.pug
+++ b/assets/pug/components/table/transaction-history.pug
@@ -12,7 +12,7 @@ table.table
             td(class="min-w-[11.125rem]") 
                div.flex.items-center(class="gap-[.5625rem]")
                   img(class="w-10 h-10 rounded-full" src=`../../assets/images/product/${bodyData.image}`, alt=`${bodyData.title}`) 
-                  div
+                  a(href="./product.html")
                      h4(class="text-xs font-semibold text-title group-hover:text-primary")=bodyData.title
                      span(class="block mt-1 font-semibold text-2xs text-content")=bodyData.subTitle  
 
