--- a/html/template/table.html
+++ b/html/template/table.html
@@ -1641,11 +1641,8 @@
                       <tbody>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Samsung TV</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Samsung TV</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
@@ -1669,11 +1666,8 @@
                         </tr>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Spring Bed</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Spring Bed</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
@@ -1697,11 +1691,8 @@
                         </tr>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Long Dress</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Long Dress</h4><span class="block mt-1 font-semibold text-2xs text-content">Bought item</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
@@ -1725,11 +1716,8 @@
                         </tr>
                         <tr class="group">
                           <td class="min-w-[11.125rem]"> 
-                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb">
-                              <div>
-                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Phillip Lightbulb</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span>
-                              </div>
-                            </div>
+                            <div class="flex items-center gap-[.5625rem]"><img class="w-10 h-10 rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb"><a href="./product.html">
+                                <h4 class="text-xs font-semibold text-title group-hover:text-primary">Phillip Lightbulb</h4><span class="block mt-1 font-semibold text-2xs text-content">Item Sold</span></a></div>
                           </td>
                           <td class="min-w-[7.5rem]"> 
                             <div> 
