blog -grid issue solve & change

--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -109,7 +109,7 @@ html(lang='en')
                     h4(class="mb-4 font-bold dark:text-white") Latest Blogs
                     ul.flex.flex-col.gap-1
                       li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
-                        a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
+                        a.flex.items-center.gap-3(href="blog-detail.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                           div.avatar  
                             div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9") 
                               img(src='../../assets/images/avatar/25.jpg' alt='avatar')
@@ -117,7 +117,7 @@ html(lang='en')
                             h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Angela R. Lear
                             span.text-content.mt-1.line-clamp-1 War taught me that not everything is glamorous.
                       li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
-                        a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
+                        a.flex.items-center.gap-3(href="blog-detail.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                           div.avatar
                             div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                               img(src='../../assets/images/avatar/15.jpg' alt='avatar')
@@ -125,7 +125,7 @@ html(lang='en')
                             h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Marjorie W. Martin
                             span.text-content.mt-1.line-clamp-1 My aim is to make the poor look rich and the rich look poor.
                       li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
-                        a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
+                        a.flex.items-center.gap-3(href="blog-detail.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                           div.avatar
                             div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                               img(src='../../assets/images/avatar/6.jpg' alt='avatar')
@@ -133,10 +133,10 @@ html(lang='en')
                             h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Russell P. Renfrew
                             span.text-content.mt-1.line-clamp-1 I think it would rob her of something.  
                       li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
-                        a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
+                        a.flex.items-center.gap-3(href="blog-detail.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                           div.avatar
                             div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
-                              img(src='../../assets/images/avatar/27.jpg' alt='avatar')
+                              img(src='../../assets/images/avatar/27.jpg' alt='avatar') 
                           div(class="w-[calc(100%_-_3.125rem)]")
                             h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Kevin A. Ek
                             span.text-content.mt-1.line-clamp-1 My aim is to make the poor look rich and the rich look poor.  
