--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -1084,28 +1084,28 @@
                   <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
                     <h4 class="mb-4 font-bold dark:text-white">Latest Blogs</h4>
                     <ul class="flex flex-col gap-1">
-                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
+                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-detail.html"> 
                           <div class="avatar"> 
                             <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Angela R. Lear</h3><span class="text-content mt-1 line-clamp-1">War taught me that not everything is glamorous.</span>
                           </div></a></li>
-                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
+                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-detail.html"> 
                           <div class="avatar">
                             <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Marjorie W. Martin</h3><span class="text-content mt-1 line-clamp-1">My aim is to make the poor look rich and the rich look poor.</span>
                           </div></a></li>
-                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
+                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-detail.html"> 
                           <div class="avatar">
                             <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Russell P. Renfrew</h3><span class="text-content mt-1 line-clamp-1">I think it would rob her of something.  </span>
                           </div></a></li>
-                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
+                      <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-detail.html"> 
                           <div class="avatar">
                             <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
                           </div>
