ecommerce dashboard design start

--- a/assets/pug/data/sidebar-menu.pug
+++ b/assets/pug/data/sidebar-menu.pug
@@ -19,6 +19,10 @@
                               title:"Unique",
                               url:"./index.html",
                            },
+                           {
+                              title:"Ecommerce",
+                              url:"./ecommerce.html",
+                           },
                         ]
                   },
                   {
