--- a/assets/pug/data/tables.pug
+++ b/assets/pug/data/tables.pug
@@ -1054,3 +1054,55 @@
         ]    
     };
 
+//- ====== Order Detail Json ====== -//
+- 
+    var ORDER_DETAIL=
+        {
+            header:["Name","Order","Delivery Date","Pricing","Status","Payment", "Action"],
+            body:[
+                {
+                    image:"7.jpg",
+                    title:"Lena Smith", 
+                    subTitle:"United Kingdom",
+                    order:"Nike Tshirt",
+                    date:"Jan 25, 2023",
+                    pricing:"$12,30",
+                    status:"Resituate",
+                    statusColor:"warning",
+                    payment:"Credit Card",
+                },
+                {
+                    image:"6.jpg",
+                    title:"Nicol Green", 
+                    subTitle:"Australia",
+                    order:"Adidas Hat",
+                    date:"Jan 12, 2023",
+                    pricing:"$10,40",
+                    status:"Completed",
+                    statusColor:"primary",
+                    payment:"Bank Transfer",
+                },
+                {
+                    image:"8.jpg",
+                    title:"David King", 
+                    subTitle:"United Kingdom",
+                    order:"Puma Bag",
+                    date:"Jan 05, 2023",
+                    pricing:"$11,23",
+                    status:"Continue",
+                    statusColor:"title",
+                    payment:"Credit Card",
+                },
+                {
+                    image:"11.jpg",
+                    title:"Jone smith", 
+                    subTitle:"Netherlands",
+                    order:"Nike Glove",
+                    date:"Jan 01, 2023",
+                    pricing:"$19,10",
+                    status:"Canceled",
+                    statusColor:"secondary",
+                    payment:"Bank Transfer",
+                },
+            ]    
+        };
