--- a/assets/pug/mixin/mixin.pug
+++ b/assets/pug/mixin/mixin.pug
@@ -30,6 +30,7 @@ include ./element-user-card.pug
 include ./element-widget1.pug
 include ./element-widget2.pug
 include ./element-widget3.pug
+include ./element-widget4.pug
 include ./element-wishlist-product-box.pug
 include ./element-user-follower.pug
 
