--- a/html/template/widgets.html
+++ b/html/template/widgets.html
@@ -782,6 +782,7 @@
                     </svg></a>
                   <ul class="sidebar-submenu">
                     <li> <a href="./index.html">Unique</a></li>
+                    <li> <a href="./ecommerce.html">Ecommerce</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
@@ -1026,7 +1027,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-success opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/_bold_sprite.svg#User"></use>
+                              <use href="../../../assets/svg/bold_sprite.svg#User"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Followers</h5>
@@ -1056,7 +1057,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-title opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/_bold_sprite.svg#Like"></use>
+                              <use href="../../../assets/svg/bold_sprite.svg#Like"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Likes</h5>
@@ -1086,7 +1087,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-secondary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/_bold_sprite.svg#Bold-Chat"></use>
+                              <use href="../../../assets/svg/bold_sprite.svg#Bold-Chat"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Comment</h5>
@@ -1116,7 +1117,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-warning opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/_bold_sprite.svg#Save"></use>
+                              <use href="../../../assets/svg/bold_sprite.svg#Save"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Saved</h5>
