--- a/html/template/invoice-preview.html
+++ b/html/template/invoice-preview.html
@@ -782,6 +782,7 @@
                     </svg></a>
                   <ul class="sidebar-submenu">
                     <li> <a href="./index.html">Unique</a></li>
+                    <li> <a href="./ecommerce.html">Ecommerce</a></li>
                   </ul>
                 </li>
                 <li class="sidebar-list"> <a class="sidebar-link sidebar-title" href="./widgets.html"><span> 
